--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -752,6 +752,7 @@
 				display: block;
 				width: 3.75em;
 				height: 3.75em;
+				transform: scale(1.2);
 				border-radius: 100%;
 				border: solid 1px #c8cccf;
 				line-height: 3.75em;
@@ -998,6 +999,65 @@
 		margin-left: 5%;
 	}
 		
+/* Node */
+	.node {
+		background: #ffffff;
+		border-radius: 50%;
+		cursor: default;
+		max-width: 100%;
+		position: fixed;
+		width: 5em;
+		height: 5em;
+		visibility: hidden;
+		transition: all ease 500ms;
+	}
+	.node:hover {
+		transform: scale(1.2);
+	}
+
+	.innerNode {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -38%);
+	}
+
+	#node1 {
+		left: 25%;
+		top: 30%;
+		animation: 1s ease-out 0.3s forwards 1 fadeIn;
+		-webkit-animation: 1s ease-out 0.3s forwards 1 fadeIn;
+	}
+	#node2 {
+		left: 45%;
+		top: 17%;
+		animation: 1s ease-out 0.6s forwards 1 fadeIn;
+		-webkit-animation: 1s ease-out 0.6s forwards 1 fadeIn;
+	}
+	#node3 {
+		left: 65%;
+		top: 25%;
+		animation: 1s ease-out 0.9s forwards 1 fadeIn;
+		-webkit-animation: 1s ease-out 0.9s forwards 1 fadeIn;
+	}
+	#node4 {
+		left: 75%;
+		top: 50%;
+		animation: 1s ease-out 1.2s forwards 1 fadeIn;
+		-webkit-animation: 1s ease-out 1.2s forwards 1 fadeIn;
+	}
+	#node5 {
+		left: 60%;
+		top: 70%;
+		animation: 1s ease-out 1.5s forwards 1 fadeIn;
+		-webkit-animation: 1s ease-out 1.5s forwards 1 fadeIn;
+	}
+	#node6 {
+		left: 30%;
+		top: 63%;
+		animation: 1s ease-out 1.8s forwards 1 fadeIn;
+		-webkit-animation: 1s ease-out 1.8s forwards 1 fadeIn;
+	}
 
 /* Footer */
 
@@ -1125,3 +1185,51 @@
 				}
 	
 			}
+
+.nodeDescription{
+	display: none;
+	position: relative;
+	top: -10%;
+}
+
+.rootNode{
+	position: fixed;
+	top: 37%;
+}
+
+
+.avatar img{
+	border-radius: 100%;
+	width: 120%;
+	height: auto;
+}
+
+
+/* Animations */
+@keyframes fadeIn {
+	0% {opacity:0;}
+		100% {
+			visibility: visible;
+			opacity:1;
+		}
+	}
+	
+	@-moz-keyframes fadeIn {
+	0% {opacity:0;}
+	100% {opacity:1;}
+	}
+	
+	@-webkit-keyframes fadeIn {
+	0% {opacity:0;}
+	100% {opacity:1;}
+	}
+	
+	@-o-keyframes fadeIn {
+	0% {opacity:0;}
+	100% {opacity:1;}
+	}
+	
+	@-ms-keyframes fadeIn {
+	0% {opacity:0;}
+	100% {opacity:1;}
+	}
